@@ -1,6 +1,6 @@
 Package: network
 Version: 1.12
-Date: 2015-01-30
+Date: 2015-03-04
 Title:  Classes for Relational Data
 Authors@R:c(
     person("Carter T.", "Butts", role=c("aut","cre"), email="buttsc@uci.edu"),
